--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="hero-media images-container" aria-hidden="true">
-          <img src="assets/Logo_EVOLVERE.png" alt="Exemplo de post elegante EVOLVERE" loading="lazy" width="560" height="420" />
+          <!-- <img src="assets/Logo_EVOLVERE.png" alt="Exemplo de post elegante EVOLVERE" loading="lazy" width="560" height="420" /> -->
         </div>
       </div>
     </section>
@@ -103,7 +103,7 @@
               <li>Atendimento direto via WhatsApp</li>
             </ul>
           </div>
-          <div class="about-visual">
+          <div class="about-visual images-container">
             <img src="assets/about-sample.jpg" alt="Equipe criando conteúdo visual" loading="lazy" width="540" height="360" />
           </div>
         </div>
