--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
             </ul>
           </div>
           <div class="about-visual images-container">
-            <img src="assets/about-sample.jpg" alt="Equipe criando conteúdo visual" loading="lazy" width="540" height="360" />
+            <img src="assets/Exemplo.png" alt="Equipe criando conteúdo visual" loading="lazy" width="540" height="360" />
           </div>
         </div>
       </div>
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="section services">
+    <section id="services" class="section services images-cintainer">
       <div class="container">
         <h2>Nossos serviços</h2>
         <p class="sub">Soluções avulsas para quem precisa de qualidade e sofisticação.</p>
@@ -161,7 +161,7 @@
         <h2>Exemplos de trabalhos</h2>
         <p class="sub">Visualize a estética e o padrão que entregamos.</p>
 
-        <div class="work-grid" aria-hidden="false">
+        <div class="work-grid images-cintainer" aria-hidden="false">
           <!-- Use suas imagens reais; manter proporção 4:5 ou 1:1 é interessante para posts -->
           <img src="assets/Exemplo.png" alt="Exemplo de post 1" loading="lazy" width="360" height="450" />
           <img src="assets/Exemplo.png" alt="Exemplo de post 2" loading="lazy" width="360" height="450" />
