--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
 
         <div class="work-grid images-cintainer" aria-hidden="false">
           <!-- Use suas imagens reais; manter proporção 4:5 ou 1:1 é interessante para posts -->
-          <img src="assets/Exemplo.png" alt="Exemplo de post 1" loading="lazy" width="360" height="450" />
-          <img src="assets/Exemplo.png" alt="Exemplo de post 2" loading="lazy" width="360" height="450" />
-          <img src="assets/Exemplo.png" alt="Exemplo de post 3" loading="lazy" width="360" height="450" />
-          <img src="assets/Exemplo.png" alt="Exemplo de post 4" loading="lazy" width="360" height="450" />
-          <img src="assets/Exemplo.png" alt="Exemplo de post 5" loading="lazy" width="360" height="450" />
-          <img src="assets/Exemplo.png" alt="Exemplo de post 6" loading="lazy" width="360" height="450" />
+          <img src="assets/Exemplo_2.png" alt="Exemplo de post 1" loading="lazy" width="360" height="450" />
+          <img src="assets/Exemplo_3.png" alt="Exemplo de post 2" loading="lazy" width="360" height="450" />
+          <img src="assets/Exemplo_4.png" alt="Exemplo de post 3" loading="lazy" width="360" height="450" />
+          <img src="assets/Exemplo_5.png" alt="Exemplo de post 4" loading="lazy" width="360" height="450" />
+          <img src="assets/Exemplo_6.png" alt="Exemplo de post 5" loading="lazy" width="360" height="450" />
+          <img src="assets/Exemplo_7.png" alt="Exemplo de post 6" loading="lazy" width="360" height="450" />
         </div>
       </div>
     </section>
